# skills-arena

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/skills_arena/: __init__.py  arena.py  config.py  exceptions.py  models.py  pricing.py
src/skills_arena/bridges/: __init__.py
src/skills_arena/generator/: __init__.py  base.py  llm.py
src/skills_arena/insights/: __init__.py
src/skills_arena/optimizer/: __init__.py  optimizer.py
src/skills_arena/parser/: __init__.py  base.py  claude_code.py  generic.py  mcp.py  openai.py  parser.py
src/skills_arena/reporter/: __init__.py  text.py
src/skills_arena/runner/: __init__.py  base.py  claude_code.py  mock.py  raw_claude.py  raw_openai.py
src/skills_arena/scorer/: __init__.py  elo.py  metrics.py
tests/: __init__.py  test_arena.py  test_config.py  test_exceptions.py  test_generator.py  test_models.py  test_optimizer.py  test_parser.py  test_reporter.py  test_runner.py  test_scorer.py
tests/fixtures/: __init__.py
tests/fixtures/skills/: generic.txt  mcp-tool.json  openai-function.json  sample-skill.md
