[project]
name = "skills-arena"
version = "0.1.0"
description = "Benchmark and optimize AI agent skill descriptions - the SEO for agent skills"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Eyal Ben Barouch", email = "eyal@tavily.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "agents", "skills", "benchmarking", "llm", "tools", "evaluation"]

dependencies = [
    "claude-agent-sdk>=0.1.0",  # Claude Agent SDK (primary)
    "anthropic>=0.40.0",        # Raw Claude API fallback
    "openai>=1.50.0",           # Raw OpenAI API fallback
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
# Note: Codex requires Node.js + @openai/codex installed separately
# Run: npm install -g @openai/codex typescript ts-node
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]
pandas = [
    "pandas>=2.0.0",
]
all = [
    "skills-arena[dev,pandas]",
]

[project.urls]
Homepage = "https://github.com/eyalbenba/skills-arena"
Repository = "https://github.com/eyalbenba/skills-arena"
Documentation = "https://github.com/eyalbenba/skills-arena#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skills_arena"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
