[project]
name = "skills-arena"
dynamic = ["version"]
description = "Benchmark and optimize AI agent skill descriptions - the SEO for agent skills"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Eyal Ben Barouch", email = "eyal@tavily.com" },
]
keywords = ["ai", "agents", "skills", "benchmarking", "llm", "tools", "evaluation", "ai-agents", "skill-testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "claude-agent-sdk>=0.1.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]
pandas = [
    "pandas>=2.0.0",
]
all = [
    "skills-arena[dev,pandas]",
]

[project.urls]
Homepage = "https://github.com/Eyalbenba/skills-arena"
Repository = "https://github.com/Eyalbenba/skills-arena"
Documentation = "https://github.com/Eyalbenba/skills-arena#readme"
Issues = "https://github.com/Eyalbenba/skills-arena/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/skills_arena/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/skills_arena"]

[tool.hatch.build.targets.sdist]
include = [
    "src/skills_arena/",
    "tests/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
